Deplyed like a champ